--- a/network-cardano/Cargo.toml
+++ b/network-cardano/Cargo.toml
@@ -16,3 +16,6 @@ cfg-if = "1.0.0"
 reqwest-websocket = "0.4.4"
 reqwest = "0.12.12"
 futures = "0.3.31"
+
+[dev-dependencies]
+clap = { version = "4.5.31", features = ["derive", "env"] }
