--- a/network-csm-tokio/Cargo.toml
+++ b/network-csm-tokio/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { version = "1", features = ["sync", "rt", "io-util"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 cbored = { version = "0.4" }
+thiserror = "2.0.12"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 hickory-resolver = "0.24"
