--- a/network-csm-cardano-ws-proxy/Cargo.toml
+++ b/network-csm-cardano-ws-proxy/Cargo.toml
@@ -24,7 +24,7 @@ tokio = { version = "1.43.0", default-features = false, features = [
 ] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace"] }
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 network-csm = { path = "../network-csm", version = "0.1" }
 tracing = "0.1.41"
