--- a/network-cardano/Cargo.toml
+++ b/network-cardano/Cargo.toml
@@ -9,7 +9,7 @@ network-csm-tokio = { path = "../network-csm-tokio" }
 network-csm-cardano-protocols = { path = "../network-csm-cardano-protocols" }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-futures = "0.2"
 anyhow = "1"
 thiserror = "2.0.12"
 cfg-if = "1.0.0"
@@ -19,3 +19,4 @@ futures = "0.3.31"
 
 [dev-dependencies]
 clap = { version = "4.5.31", features = ["derive", "env"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
