--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [workspace]
 resolver = "2"
 members = [
-    "network-csm", "network-csm-cardano-protocols", "network-csm-macro",
-    "network-csm-test", "network-csm-tokio", "network-csm-example", "network-cardano", "network-csm-cardano-ws-proxy",
+    "network-csm",
+    "network-csm-cardano-protocols",
+    "network-csm-macro",
+    "network-csm-test",
+    "network-csm-tokio",
+    "network-csm-example",
+    "network-cardano",
+    "network-csm-cardano-ws-proxy",
+    "webapp",
 ]
