--- a/network-csm-cardano-protocols/Cargo.toml
+++ b/network-csm-cardano-protocols/Cargo.toml
@@ -2,6 +2,7 @@
 name = "network-csm-cardano-protocols"
 version = "0.1.0"
 edition = "2024"
+license = "Apache-2.0"
 
 [dependencies]
 cbored = { version = "0.4" }
