--- a/network-csm-example/Cargo.toml
+++ b/network-csm-example/Cargo.toml
@@ -2,6 +2,7 @@
 name = "network-csm-example"
 version = "0.1.0"
 edition = "2024"
+license = "Apache-2.0"
 
 [dependencies]
 network-csm = { path = "../network-csm" }
