--- a/network-csm/Cargo.toml
+++ b/network-csm/Cargo.toml
@@ -3,6 +3,7 @@ name = "network-csm"
 version = "0.1.0"
 edition = "2024"
 description = "Network CBOR Simple Muxer"
+license = "Apache-2.0"
 
 [dependencies]
 cbored = { version = "^0.4.2", features = ["derive"] }
