--- a/network-cardano/Cargo.toml
+++ b/network-cardano/Cargo.toml
@@ -8,6 +8,8 @@ license = "Apache-2.0"
 network-csm = { path = "../network-csm" }
 network-csm-tokio = { path = "../network-csm-tokio" }
 network-csm-cardano-protocols = { path = "../network-csm-cardano-protocols" }
+
+# Library deps
 tokio = { version = "1", features = ["io-util"] }
 tracing = "0.1"
 tracing-futures = "0.2"
@@ -18,10 +20,17 @@ reqwest-websocket = "0.4.4"
 reqwest = "0.12.12"
 futures = "0.3.31"
 
-# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-# tokio = { version = "1", features = [""] }
-
 [dev-dependencies]
+# For running examples & tests
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tokio = { version = "1", features = ["full"] }
 clap = { version = "4.5.31", features = ["derive", "env"] }
+
+# WebSocket peer-sharing demo
+axum = { version = "0.7", features = ["ws"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+futures-util = "0.3"
+
+# Tokio features needed by examples (WS, timers, macros, multi-thread)
+# NOTE: This merges additively with the lighter tokio in [dependencies].
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
