--- a/network-cardano/Cargo.toml
+++ b/network-cardano/Cargo.toml
@@ -17,6 +17,7 @@ cfg-if = "1.0.0"
 reqwest-websocket = "0.4.4"
 reqwest = "0.12.12"
 futures = "0.3.31"
+clap = { version = "4", features = ["derive"] }
 
 # [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # tokio = { version = "1", features = [""] }
