--- a/network-csm-cardano-protocols/Cargo.toml
+++ b/network-csm-cardano-protocols/Cargo.toml
@@ -11,3 +11,4 @@ cbored-derive = { version = "^0.4.2" }
 network-csm = { path = "../network-csm", version = "0.1" }
 network-csm-macro = { path = "../network-csm-macro", version = "0.1" }
 anyhow = "1"
+hex = "0.4.3"
